--- a/assignments/pyproject.toml
+++ b/assignments/pyproject.toml
@@ -1,13 +1,23 @@
 [project]
+name = "life_expectancy"
+version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.8"
 description = "First assignment of the Foundations Learning Path"
 authors = [
-    {name = "Fernando Cordeiro<fernando@daredata.engineering>"}
+    {name = "Fernando Cordeiro<fernando@daredata.engineering>"}, 
+    {name = "Ines Vieira<ines.vieira.tic@gmail.com>"}
 ]
+
+dependencies = ["pandas"]
 
 [project.optional-dependencies]
 dev = ["pytest", "pylint", "pytest-cov", "toml"]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 
 [tool.coverage.run]
 omit = [
@@ -16,3 +26,11 @@ omit = [
 
 [tool.coverage.report]
 fail_under = 80
+
+
+[tool.setuptools]
+packages = ["life_expectancy"]
+
+
+
+
